// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fetch_inbox tool fetching inbox successfully should fetch inbox with threads 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 2
**Unread Threads:** 1

## Threads (2)

- [Test Channel] Test Thread 1 🔵 (ID: 12345)
- [Test Channel] Test Thread 2 ⭐ (ID: 12346)

## Next Steps

- Use \`load_thread\` to read specific threads with their comments
- Use \`load_conversation\` to read specific conversations with their messages
- Use \`mark_done\` to mark items as read and archive them"
`;

exports[`fetch_inbox tool fetching inbox successfully should fetch inbox with unread conversations 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 0
**Unread Threads:** 0
**Total Conversations:** 2
**Unread Conversations:** 2

## Threads (0)

_No threads in inbox_

## Conversations (2)

- DM with Alice, Bob 🔵 (ID: 33333)
- Project Discussion 🔵 (ID: 33334)

## Next Steps

- Use \`load_thread\` to read specific threads with their comments
- Use \`load_conversation\` to read specific conversations with their messages
- Use \`mark_done\` to mark items as read and archive them"
`;

exports[`fetch_inbox tool fetching inbox successfully should filter by date range 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 0
**Unread Threads:** 0

## Threads (0)

_No threads in inbox_
"
`;

exports[`fetch_inbox tool fetching inbox successfully should filter only unread items when requested 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 1
**Unread Threads:** 1

## Threads (1)

- [Test Channel] Unread Thread 🔵 (ID: 12345)

## Next Steps

- Use \`load_thread\` to read specific threads with their comments
- Use \`load_conversation\` to read specific conversations with their messages
- Use \`mark_done\` to mark items as read and archive them"
`;

exports[`fetch_inbox tool fetching inbox successfully should handle empty inbox 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 0
**Unread Threads:** 0

## Threads (0)

_No threads in inbox_
"
`;

exports[`fetch_inbox tool fetching inbox successfully should not display conversations when none are unread 1`] = `
"# Inbox for Workspace 11111

**Total Threads:** 1
**Unread Threads:** 1

## Threads (1)

- [Test Channel] Test Thread 🔵 (ID: 12345)

## Next Steps

- Use \`load_thread\` to read specific threads with their comments
- Use \`load_conversation\` to read specific conversations with their messages
- Use \`mark_done\` to mark items as read and archive them"
`;
